Bug 1624095 - fix bustage from bug 1620632: error: incomplete type 'nsIMAPMessagePartID' used in type trait expression. rs=bustage-fix